--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
     </repositories>
 
     <dependencies>
+
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -31,7 +33,12 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>8.0.33</version>
       </dependency>
-      <dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
           <groupId>io.github.cdimascio</groupId>
           <artifactId>java-dotenv</artifactId>
           <version>5.2.2</version>
@@ -51,6 +58,7 @@
       <artifactId>javafx-web</artifactId>
       <version>17.0.6</version>
     </dependency>
+
       <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-swing</artifactId>
